assets/css/style.css
.clearfix:after {
    content: "";
    display: table;
    clear: both;
  }

  .hero {
    font-size: 2em;
    margin-bottom: 2em;
    background: grey;
    color:white;
  }

  .hero h2 {
    position: relative;
    left: 3em;
    padding-bottom:1.5em;
  }
 
  #searchbtn, #search {
    border-radius: .5rem;
    color:rgb(56, 56, 56);
    height:3.5rem;
    font-size: 2.75rem;
  }

  #search {
    margin-right:1em;
    min-width: 25rem;
    width:60%;

  }

  #searchbtn {

    background: white;
    border: 1px rgb(58, 58, 58) solid;
  }

